Fixed some syntax
- Changed removeFirst() to remove(0)